<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
	<string name="main_button">Go</string>
    <string name="total">Total Bill</string>
	<string name="bill_label">Bill:</string>
	<string name="total_label">Total:</string>
	<string name="tip">Tip %</string>
	<string name="tip_label">Tip:</string>
	<string name="default_tip">$0.00</string>
	
</resources>
