<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    android:gravity="center_vertical">
	<TextView
		android:id="@+id/mainTitle"
		android:gravity="center"
		android:textSize="32sp"
		android:text="@string/app_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:layout_weight="1"
			android:layout_gravity="bottom"
			android:textSize="@dimen/label"
			android:text="@string/bill_label" />
        <TextView
			android:id="@+id/mainTotalView"
			android:layout_weight="2"
			android:gravity="left"
			android:layout_marginLeft="26dp"
			android:layout_below="@id/mainTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:padding="@dimen/num_pad"
			android:textSize="36sp"
			android:text="@string/default_tip"/> 
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal">
	    <TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:layout_gravity="bottom"
			android:layout_weight="1"
			android:textSize="@dimen/label"
			android:text="@string/tip_label" />
		<TextView
			android:id="@+id/mainTipView"
			android:gravity="left"
			android:layout_weight="2"
			android:layout_marginLeft="26dp"
			android:layout_below="@id/mainTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:padding="@dimen/num_pad"
			android:textSize="36sp"
			android:text="@string/default_tip"/>
	</LinearLayout>
	<View 
		android:layout_marginTop="5dp"
		android:layout_gravity="center_horizontal"
		android:background="#000"
		android:layout_height="2dp"
		android:layout_width="200dp"
		/>
	<TextView
		android:id="@+id/mainTotalWithTipView"
		android:gravity="center"
		android:layout_below="@id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:padding="@dimen/num_pad"
		android:textSize="48sp"
		android:text="@string/default_tip"/>
	<LinearLayout
		android:layout_below="@id/mainTipView"
		android:layout_marginTop="5dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<EditText
			android:id="@+id/mainTotal"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:hint="@string/total"
			android:layout_weight="2" />
		<EditText
			android:id="@+id/mainTip"
			android:layout_width="0dp"
			android:layout_height="48dp"
			android:hint="@string/tip"
			android:layout_weight="1" />
	    <Button
		    android:text="@string/main_button"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
			android:layout_weight="1"
		    android:onClick="doCalculate" />
	</LinearLayout>

</LinearLayout>
